packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/upgrade-immutable-event-type-parent.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if changing the parent event in a parent definition is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:cs"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match"/>
          <property name="b" object-type="a" description="b" unique="false" optional="true" multivalued="true" merge="drop"/>
        </properties>
      </eventtype>
      <eventtype name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match"/>
          <property name="b" object-type="a" description="b" unique="false" optional="true" multivalued="true" merge="drop"/>
        </properties>
      </eventtype>
      <eventtype name="c" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <parent eventtype="a" propertymap="a:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="c" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <!-- The eventtype attribute in below parent definition changed -->
        <parent eventtype="b" propertymap="a:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
